try to solve transform bug on ios

--- a/src/index.css
+++ b/src/index.css
@@ -81,15 +81,11 @@ body,
 
 .animated_card {
   opacity: 0;
-  transform: translateX(100%);
-  transition: opacity 500ms ease, transform 500ms ease;
-  will-change: transform, opacity;
-  -webkit-transform: translateX(100%);
-  -webkit-transition: opacity 500ms ease, -webkit-transform 500ms ease;
+  transform: matrix(1, 0, 0, 1, 900, 0);
+  transition: transform 500ms ease;
 }
 
 .animated_card.visible {
   opacity: 1;
-  transform: translateX(0%);
-  -webkit-transform: translateX(1px);
+  transform: matrix(1, 0, 0, 1, 0, 0);
 }
